@@ -21,7 +21,7 @@ function toggle_lines(btn, cls) {
 <body>
 <div id='header'>
     <div class='content'>
-        <h1>Coverage for <b>c:\ned\coverage\trunk\test\farm\html\src\a.py</b>:
+        <h1>Coverage for <b>a</b> :
             <span class='pc_cov'>67%</span>
         </h1>
         <h2 class='stats'>
@@ -47,13 +47,13 @@ function toggle_lines(btn, cls) {
     
 </td>
 <td class='text' valign='top'>
-<p class='pln'># A test file for HTML reporting by coverage.</p>
-<p class='pln'>&nbsp;</p>
-<p class='stm run hide'>if 1 &lt; 2:</p>
-<p class='pln'>&nbsp; &nbsp; # Needed a &lt; to look at HTML entities.</p>
-<p class='stm run hide'>&nbsp; &nbsp; a = 3</p>
-<p class='pln'>else:</p>
-<p class='stm mis'>&nbsp; &nbsp; a = 4</p>
+<p class='pln'><span class='com'># A test file for HTML reporting by coverage.</span><span class="strut">&nbsp;</span></p>
+<p class='pln'><span class="strut">&nbsp;</span></p>
+<p class='stm run hide'><span class='key'>if</span> <span class='num'>1</span> <span class='op'>&lt;</span> <span class='num'>2</span><span class='op'>:</span><span class="strut">&nbsp;</span></p>
+<p class='pln'>&nbsp; &nbsp; <span class='com'># Needed a &lt; to look at HTML entities.</span><span class="strut">&nbsp;</span></p>
+<p class='stm run hide'>&nbsp; &nbsp; <span class='nam'>a</span> <span class='op'>=</span> <span class='num'>3</span><span class="strut">&nbsp;</span></p>
+<p class='pln'><span class='key'>else</span><span class='op'>:</span><span class="strut">&nbsp;</span></p>
+<p class='stm mis'>&nbsp; &nbsp; <span class='nam'>a</span> <span class='op'>=</span> <span class='num'>4</span><span class="strut">&nbsp;</span></p>
     
 </td>
 </tr>
