@@ -13,6 +13,10 @@ runfunc(html_it, rundir="src")
 contains("src/tabbed.py", "\tif x:\t\t\t\t\t\t# look nice")
 
 contains("html/tabbed.html",
-    "<p class='stm run hide'>&nbsp; &nbsp; if x:&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; # look nice</p>")
+    ">&nbsp; &nbsp; <span class='key'>if</span> <span class='nam'>x</span>"
+    "<span class='op'>:</span>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;"
+    " &nbsp; &nbsp; &nbsp; &nbsp;&nbsp; <span class='com'># look nice</span>"
+    )
+
 doesnt_contain("html/tabbed.html", "\t")
 clean("html")
